syntax = "proto3";

option java_multiple_files = true;
option java_package = "movie_tonic.movie";
option java_outer_classname = "MovieProto";


package movie;


message Movie {
    string id = 1;
    string title = 2;
    string genre = 3;
}

message CreateMovieRequest {
    Movie movie = 1;
}

message CreateMovieResponse {
    Movie movie = 1;
}

message ReadMovieRequest {
    string id = 1;
}

message ReadMovieResponse {
    Movie movie = 1;
}

message ReadMoviesRequest {}

message ReadMoviesResponse {
    repeated Movie movies = 1;
}

message UpdateMovieRequest {
    Movie movie = 1;
}

message UpdateMovieResponse {
    Movie movie = 1;
}

message DeleteMovieRequest {
    string id = 1;
}

message DeleteMovieResponse {
    bool success = 1;
}

service MovieService {
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {}
    rpc GetMovie(ReadMovieRequest) returns (ReadMovieResponse) {}
    rpc GetMovies(ReadMoviesRequest) returns (ReadMoviesResponse) {}
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {}
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {}
}